syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
// import "google/protobuf/struct.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";
// import "mwitkow/go-proto-validators/validator.proto";

// import "core.proto";
// import "gorm_db.proto";

package swing.v1;
option go_package = "./pb";

message TProduct {

  int32 id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  string title = 2;
  string url = 3;
  float price = 4;
  string description = 5;

  TStore store = 51;

  google.protobuf.Timestamp createdAt = 101 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp updatedAt = 102 [(google.api.field_behavior) = OUTPUT_ONLY];

}

message TStore {

  int32 id = 1;

  string name = 2;
  string url = 3;
  string address = 4;
  string phone = 5;
  int32 operational_time_start = 6;
  int32 operational_time_end = 7;

  google.protobuf.Timestamp createdAt = 101 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp updatedAt = 102 [(google.api.field_behavior) = OUTPUT_ONLY];

}
